--- a/documentation/iki_read.html
+++ b/documentation/iki_read.html
@@ -234,6 +234,11 @@
                       <td class="column">Print the total number of variables.</td>
                     </tr>
                     <tr class="row">
+                      <td class="column"><code class="code">-R</code></td>
+                      <td class="column"><code class="code">--reassign</code></td>
+                      <td class="column">Re-assign the variable for the given name and matching content value with the given string.</td>
+                    </tr>
+                    <tr class="row">
                       <td class="column"><code class="code">-r</code></td>
                       <td class="column"><code class="code">--replace</code></td>
                       <td class="column">Simple substitution, replacing the variable for the given name with the given string.</td>
@@ -263,7 +268,7 @@
                 </div>
               </dl>
               <p class="p">
-                The <code class="code">-s/--substitute</code> option requires 3 additional parameters: <code class="code">&lt;vocabulary&gt; &lt;replace&gt; &lt;with&gt;</code>.
+                The <code class="code">-R/--reassign</code> and the <code class="code">-s/--substitute</code> options require 3 additional parameters: <code class="code">&lt;vocabulary&gt; &lt;replace&gt; &lt;with&gt;</code>.
               </p>
               <dl class="dl">
                 <div class="di">
@@ -295,6 +300,9 @@
               </dl>
               <p class="p">
                 The difference between <code class="code">-r/--replace</code> and <code class="code">-s/--substitute</code> is that the <code class="code">-r/--replace</code> option substitutes all matching vocabulary names and the <code class="code">-s/--substitute</code> option substitutes all matching vocabulary names that must also have the given matching content.
+              </p>
+              <p class="p">
+                The <code class="code">-R/--reassign</code> option is identical to the <code class="code">-s/--substitute</code> option except that the <code class="code">-w/--wrap</code> option is ignored (not applied).
               </p>
               <p class="p">
                 The <code class="code">-s/--substitute</code> option takes priority over the <code class="code">-r/--replace</code> option when matching the same variable.
