--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2022 / 10 / 31</div>
+            <a href="news/2022_10_31-fll_0_6_1_release.html" class="nav-text link">FLL 0.6.1 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2022 / 07 / 31</div>
             <a href="news/2022_07_31-fll_0_6_0_release.html" class="nav-text link">FLL 0.6.0 Release</a>
           </div>
@@ -97,8 +101,33 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article id="2022_07_31-fll_0_6_0_release" class="article">
+          <article id="2022_10_31-fll_0_6_1_release" class="article">
             <header class="article-header header">
+              <h2 id="2022_10_31-fll_0_6_1_release-title" class="article-title h h2">2022 / 10 / 31 - FLL 0.6.1 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The Featureless Linux Library stable version 0.6.1 is released.
+              </p>
+              <p class="p">
+                Most of the fixes and improvements are centered around the build and test systems.
+                This release should be more portable and testable.
+              </p>
+              <p class="p">
+                The <strong>BASH</strong> alternative <strong>ZSH</strong> is now supported by several scripts.
+              </p>
+              <p class="p">
+                Check out the project on the <a href="fll.html#release" class="link"><abbr title="Featureless Linux Library">FLL</abbr> release</a> page.
+              </p>
+              <p class="p">
+                <a id="2022_10_31-fll_0_6_1_release-more" href="news/2022_10_31-fll_0_6_1_release.html" class="content link" aria-labelledby="2022_10_31-fll_0_6_1_release-more 2022_10_31-fll_0_6_1_release-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2022_07_31-fll_0_6_0_release" class="article">
+            <header class="article-header header separate">
               <h2 id="2022_07_31-fll_0_6_0_release-title" class="article-title h h2">2022 / 07 / 31 - FLL 0.6.0 Release</h2>
             </header>
 
