Bugfix: Invalid links for sha256 checksums for several files.

--- a/fll.html
+++ b/fll.html
@@ -139,117 +139,117 @@
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/byte_dump-0.6.1.tar.gz" class="link download">Byte Dump 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/byte_dump-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/byte_dump-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/control-0.6.1.tar.gz" class="link download">Control 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/control-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/control-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/controller-0.6.1.tar.gz" class="link download">Controller 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/controller-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/controller-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fake-0.6.1.tar.gz" class="link download">Fake 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fake-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fake-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/firewall-0.6.1.tar.gz" class="link download">Firewall 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/firewall-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/firewall-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_list_read-0.6.1.tar.gz" class="link download">FSS Basic List Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_list_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_list_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_list_write-0.6.1.tar.gz" class="link download">FSS Basic List Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_list_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_list_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_read-0.6.1.tar.gz" class="link download">FSS Basic Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_write-0.6.1.tar.gz" class="link download">FSS Basic Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_basic_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_embedded_list_read-0.6.1.tar.gz" class="link download">FSS Embedded List Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_embedded_list_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_embedded_list_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_embedded_list_write-0.6.1.tar.gz" class="link download">FSS Embedded List Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_embedded_list_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_embedded_list_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_list_read-0.6.1.tar.gz" class="link download">FSS Extended List Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_list_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_list_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_list_write-0.6.1.tar.gz" class="link download">FSS Extended List Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_list_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_list_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_read-0.6.1.tar.gz" class="link download">FSS Extended Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_write-0.6.1.tar.gz" class="link download">FSS Extended Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_extended_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_identify-0.6.1.tar.gz" class="link download">FSS Identify 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_identify-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_identify-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_payload_read-0.6.1.tar.gz" class="link download">FSS Payload Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_payload_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_payload_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_payload_write-0.6.1.tar.gz" class="link download">FSS Payload Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_payload_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_payload_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_status_code-0.6.1.tar.gz" class="link download">FSS Status Code 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/fss_status_code-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/fss_status_code-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/iki_read-0.6.1.tar.gz" class="link download">IKI Read 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/iki_read-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/iki_read-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/iki_write-0.6.1.tar.gz" class="link download">IKI Write 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/iki_write-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/iki_write-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/status_code-0.6.1.tar.gz" class="link download">Status Code 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/status_code-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/status_code-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/programs/utf8-0.6.1.tar.gz" class="link download">Utf8 0.6.1</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/programs/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/programs/utf8-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/programs/utf8-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                   </tbody>
@@ -271,12 +271,12 @@
                   <tbody class="body set">
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/stand_alone/fake-0.6.1.tar.gz" class="link download">Fake 0.6.1 (Stand Alone)</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/stand_alone/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/stand_alone/fake-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/stand_alone/fake-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
                       <td class="column"><a href="release/fll/0.6/1/stand_alone/utf8-0.6.1.tar.gz" class="link download">Utf8 0.6.1 (Stand Alone)</a></td>
-                      <td class="column"><a href="release/fll/0.6/1/stand_alone/fll-0.6.1.tar.sha256" class="link download">SHA256</a></td>
+                      <td class="column"><a href="release/fll/0.6/1/stand_alone/utf8-0.6.1.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/1/stand_alone/utf8-0.6.1.tar.asc" class="link download">GPG</a></td>
                     </tr>
                   </tbody>
